--- a/webserver/webserver/changuito/changuito-war/src/main/webapp/WEB-INF/web.xml
+++ b/webserver/webserver/changuito/changuito-war/src/main/webapp/WEB-INF/web.xml
@@ -54,7 +54,16 @@
         <servlet-name>login</servlet-name>
         <url-pattern>/login</url-pattern>
     </servlet-mapping>
-	
+
+    <servlet>
+        <servlet-name>ChanguitoServices</servlet-name>
+        <servlet-class>ar.com.utn.changuito.architecture.services.GameServicesServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ChanguitoServices</servlet-name>
+        <url-pattern>/ChanguitoServices/*</url-pattern>
+    </servlet-mapping>
+
 	<welcome-file-list>
         <welcome-file>login.jsp</welcome-file>
     </welcome-file-list>
