--- a/webserver/webserver/changuito/changuito-war/pom.xml
+++ b/webserver/webserver/changuito/changuito-war/pom.xml
@@ -61,7 +61,13 @@
             <version>1.3.2</version>
         </dependency>
 
-        <!-- Test Dependencies -->
+    <dependency>
+    <groupId>com.googlecode.json-simple</groupId>
+        <artifactId>json-simple</artifactId>
+        <version>1.1</version>
+    </dependency>
+
+    <!-- Test Dependencies -->
         <dependency>
             <groupId>com.google.appengine</groupId>
             <artifactId>appengine-testing</artifactId>
