Estadisticas seleccion de productos.

--- a/webserver/webserver/changuito/changuito-war/pom.xml
+++ b/webserver/webserver/changuito/changuito-war/pom.xml
@@ -99,6 +99,13 @@
         <outputDirectory>target/${project.artifactId}-${project.version}/WEB-INF/classes</outputDirectory> 
                                    
         <plugins>
+	        <plugin>
+	         <artifactId>maven-compiler-plugin</artifactId>
+		        <configuration>
+		        	<source>1.7</source>
+		        	<target>1.7</target>
+		        </configuration>
+	        </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
