--- a/webserver/webserver/changuito/changuito-war/src/main/webapp/WEB-INF/web.xml
+++ b/webserver/webserver/changuito/changuito-war/src/main/webapp/WEB-INF/web.xml
@@ -56,6 +56,15 @@
     </servlet-mapping>
 
     <servlet>
+        <servlet-name>about</servlet-name>
+        <servlet-class>QuienesSomosServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>about</servlet-name>
+        <url-pattern>/about</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
         <servlet-name>ChanguitoServices</servlet-name>
         <servlet-class>ar.com.utn.changuito.architecture.services.GameServicesServlet</servlet-class>
     </servlet>
