--- a/webserver/webserver/changuito/changuito-war/src/main/webapp/WEB-INF/web.xml
+++ b/webserver/webserver/changuito/changuito-war/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,11 @@
         <url-pattern>/home</url-pattern>
     </servlet-mapping>
 
+    <servlet-mapping>
+        <servlet-name>home</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
+
 	<servlet>
         <servlet-name>configuration</servlet-name>
         <servlet-class>ConfigurationServlet</servlet-class>
@@ -73,7 +78,4 @@
         <url-pattern>/ChanguitoServices/*</url-pattern>
     </servlet-mapping>
 
-	<welcome-file-list>
-        <welcome-file>login.jsp</welcome-file>
-    </welcome-file-list>
 </web-app>
