--- a/webserver/webserver/changuito/pom.xml
+++ b/webserver/webserver/changuito/pom.xml
@@ -18,6 +18,9 @@
                   <groupId>com.google.appengine</groupId>
                   <artifactId>appengine-maven-plugin</artifactId>
                   <version>${appengine.target.version}</version>
+                  <configuration>
+                    <port>8001</port>
+                  </configuration>
               </plugin>
           </plugins>
       </pluginManagement>
