--- a/webserver/webserver/changuito/changuito-war/pom.xml
+++ b/webserver/webserver/changuito/changuito-war/pom.xml
@@ -72,7 +72,12 @@
             <artifactId>commons-io</artifactId>
             <version>1.3.2</version>
         </dependency>
-
+		<dependency>
+			<groupId>javax.jdo</groupId>
+			<artifactId>jdo-api</artifactId>
+			<version>3.0.1</version>
+		</dependency>
+        
     <dependency>
     <groupId>com.googlecode.json-simple</groupId>
         <artifactId>json-simple</artifactId>
@@ -131,11 +136,12 @@
                         <jvmFlag>-Ddatastore.backing_store=${project.basedir}\localstore\db.bin</jvmFlag>
                         <jvmFlag>-Dappengine.generated.dir=${basedir}\localstore</jvmFlag>
                         <jvmFlag>-Xdebug</jvmFlag>
-                        <jvmFlag>-Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n</jvmFlag>
+                        <jvmFlag>-Xrunjdwp:transport=dt_socket,address=8001,server=y,suspend=n</jvmFlag>
                         <jvmFlag>-Xmx1024m</jvmFlag>
                     </jvmFlags>
                     <address>0.0.0.0</address>
-                    <port>80</port>
+<!--                     <port>80</port> -->
+                    <port>8001</port>
                 </configuration>
                 <dependencies>
                     <dependency>
